--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
+    "babel": "^6.23.0",
+    "bootstrap": "^4.3.1",
     "browserslist": "^4.6.3",
     "firebase": "^6.2.0",
+    "hamburgers": "^1.1.3",
+    "mdbreact": "^4.16.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-hamburger-menu": "^1.1.1",
+    "react-load-script": "0.0.6",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
